--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Quarantine and Chill</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/navbars/">
+    <link rel="icon" href="images/logo.png" >
+    <link href="css/sticky-footer-navbar.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +32,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="navbar.css" rel="stylesheet">
+    <link href="css/navbar.css" rel="stylesheet">
   </head>
   <body>
   
@@ -38,7 +40,7 @@
 
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Quarantine and fun</a>
+  <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="width: 55px; height: 55px"></img>Quarantine and fun</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -46,7 +48,7 @@
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">To Do</a>
@@ -80,7 +82,7 @@
     </form>
   </div>
 </nav>
-
+</div>
 <footer class="footer mt-auto py-3">
   <div class="container">
     <span class="text-muted">Place sticky footer content here.</span>
@@ -90,7 +92,7 @@
   
 
  
-</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="templates/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="templates/assets/dist/js/bootstrap.bundle.min.js"></script>
 </html>
