--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   </div>
 
 
-<div class="jumbotron p-4 p-md-5 text-white rounded bg-dark"><img src="images/tech.svg">
-    <div class="col-md-6 px-0">
+<div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+    <div class="col-md-6 px-0"><img src="images/tech.svg" width="350">
       <h1 class="display-4 font-italic">Trending coding skills of 2020</h1>
       <p class="lead my-3">Keep yourself up-to-date despite of just the academic knowledge, learn extra.</p>
       <p class="lead mb-0"><a href="https://www.excellentwebworld.com/in-demand-developer-skills/#:~:text=%20Most%20In-Demand%20Developer%20Skills%20For%202020%3A%20Upgrade,stands%20true%20for%20developers%20too.%20The...%20More%20" class="text-white font-weight-bold" target="_blank">Continue reading...</a></p>
