--- a/games.html
+++ b/games.html
@@ -50,33 +50,33 @@
 
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown active">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">To Do</a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
           <a class="dropdown-item" href="games.html">Games</a>
-          <a class="dropdown-item" href="#">Video calls</a>
+          <a class="dropdown-item" href="vc.html">Video calls</a>
           <a class="dropdown-item" href="#">Exercise</a>
           <a class="dropdown-item" href="#">Courses</a>
           <a class="dropdown-item" href="#">Internships</a>
         </div>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="#">Covid-19 <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Academics</a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
-          <a class="dropdown-item" href="#">Collpoll</a>
-          <a class="dropdown-item" href="#">Notes</a>
+          <a class="dropdown-item" href="collpoll.html">Collpoll</a>
+          <a class="dropdown-item" href="notes.html">Notes</a>
           <a class="dropdown-item" href="#">Recorded Lectures</a>
           <a class="dropdown-item" href="#">Lecture schedule</a>
           <a class="dropdown-item" href="#">e-Library</a>
         </div>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
       </li>
     </ul>
@@ -238,11 +238,11 @@
           </div>
         </div>
   </center><br><br>
-<footer class="footer mt-auto py-3">
-  <div class="container">
-    <span class="text-muted">Email:  &nbsp;QandF@gmail.com</span>
-  </div>
-</footer>
+<footer class="footer" style="background-color: #878c94; color: white">
+      <div class="container">
+        <span  style="color: white">Contact No. 7020098126</span>
+      </div>
+    </footer>
 
  
 
