--- a/index.html
+++ b/index.html
@@ -50,32 +50,32 @@
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">To Do</a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
           <a class="dropdown-item" href="games.html">Games</a>
-          <a class="dropdown-item" href="#">Video calls</a>
+          <a class="dropdown-item" href="vc.html">Video calls</a>
           <a class="dropdown-item" href="#">Exercise</a>
           <a class="dropdown-item" href="#">Courses</a>
           <a class="dropdown-item" href="#">Internships</a>
         </div>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="#">Covid-19 <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Academics</a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
-          <a class="dropdown-item" href="#">Collpoll</a>
-          <a class="dropdown-item" href="#">Notes</a>
-          <a class="dropdown-item" href="#">Recorded Lectures</a>
-          <a class="dropdown-item" href="#">Lecture schedule</a>
+          <a class="dropdown-item" href="collpoll.html">Collpoll</a>
+          <a class="dropdown-item" href="notes.html">Notes</a>
+          <a class="dropdown-item" href="recording.html">Recorded Lectures</a>
+          <a class="dropdown-item" href="timetable.html">Lecture schedule</a>
           <a class="dropdown-item" href="#">e-Library</a>
         </div>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
       </li>
     </ul>
@@ -135,9 +135,9 @@
 
 
 <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
-    <div class="col-md-6 px-0"><img src="images/tech.svg" width="350">
+    <div class="col-md-6 px-0"><img src="images/tech.svg" width="750">
       <h1 class="display-4 font-italic">Trending coding skills of 2020</h1>
-      <p class="lead my-3">Keep yourself up-to-date despite of just the academic knowledge, learn extra.</p>
+      <p class="lead my-3">Keep yourself up-to-date despite of just the academic knowledge, learn new.</p>
       <p class="lead mb-0"><a href="https://www.excellentwebworld.com/in-demand-developer-skills/#:~:text=%20Most%20In-Demand%20Developer%20Skills%20For%202020%3A%20Upgrade,stands%20true%20for%20developers%20too.%20The...%20More%20" class="text-white font-weight-bold" target="_blank">Continue reading...</a></p>
     </div>
   </div>
@@ -164,7 +164,7 @@
           <h3 class="mb-0">Android 11</h3>
           <div class="mb-1 text-muted">September 8</div>
           <p class="mb-auto">Go straight to the stuff that matters most. Because Android 11 is optimized for how you use your phone. Giving you powerful device controls.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
+          <a href="https://www.android.com/android-11/" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><img src="images/android.jpg" height="255" width="170"></svg>
@@ -184,20 +184,20 @@
           <li>Frame Content</li>
           <li>Collect imformation and sources</li>
           <li>Mail us</li>
+
+
         </ol>
         
         <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
       </div><!-- /.blog-post -->
 
 
-
-
-<footer class="footer mt-auto py-3">
-  <div class="container">
-    <span class="text-muted">Email:  &nbsp;QandF@gmail.com</span>
-  </div>
-</footer>
-
+<br>
+<footer class="footer" style="background-color: #878c94; color: white">
+      <div class="container">
+        <span  style="color: white">Contact No. 7020098126</span>
+      </div>
+    </footer>
  
 
 
