--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">Covid-19 <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="covid.html">Covid-19 <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Academics</a>
