--- a/vc.html
+++ b/vc.html
@@ -56,22 +56,22 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">To Do</a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
           <a class="dropdown-item" href="games.html">Games</a>
-          <a class="dropdown-item" href="#">Video calls</a>
+          <a class="dropdown-item" href="vc.html">Video calls</a>
           <a class="dropdown-item" href="#">Exercise</a>
           <a class="dropdown-item" href="#">Courses</a>
           <a class="dropdown-item" href="#">Internships</a>
         </div>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">Covid-19 <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="covid.html">Covid-19 <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Academics</a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
           <a class="dropdown-item" href="collpoll.html">Collpoll</a>
           <a class="dropdown-item" href="notes.html">Notes</a>
-          <a class="dropdown-item" href="#">Recorded Lectures</a>
-          <a class="dropdown-item" href="#">Lecture schedule</a>
+          <a class="dropdown-item" href="recording.html">Recorded Lectures</a>
+          <a class="dropdown-item" href="timetable.html">Lecture schedule</a>
           <a class="dropdown-item" href="#">e-Library</a>
         </div>
       </li>
