--- a/collpoll.html
+++ b/collpoll.html
@@ -76,7 +76,7 @@
         </div>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="abc.html">About Us <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-md-0">
