--- a/recording.html
+++ b/recording.html
@@ -72,7 +72,7 @@
           <a class="dropdown-item" href="notes.html">Notes</a>
           <a class="dropdown-item" href="recording.html">Recorded Lectures</a>
           <a class="dropdown-item" href="timetable.html">Lecture schedule</a>
-          <a class="dropdown-item" href="#">e-Library</a>
+          <a class="dropdown-item" href="abc.html">e-Library</a>
         </div>
       </li>
       <li class="nav-item ">
